<resources>
    <string name="app_name">Study Guide</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="question_antartica">No one in their right mind would live in Antartica.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="true_toast">TRUE</string>
    <string name="false_toast">FALSE</string>
    <string name="warning_text">Are You Sure You Want to Do This?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong!</string>
    <string name="australia">Australia</string>
    <string name="oceans">Oceans</string>
    <string name="middle_east">Middle East</string>
    <string name="africa">Africa</string>
    <string name="americas">Americas</string>
    <string name="asia">Asia</string>
</resources>